--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -71,6 +71,24 @@
             <remove name="TRACEVerbHandler" />
             <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
         </handlers>
+		<staticContent>
+		  <remove fileExtension=".woff2" />
+		  <remove fileExtension=".woff" />
+		  <remove fileExtension=".ttf" />
+		  <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+		  <mimeMap fileExtension=".woff"  mimeType="font/woff" />
+		  <mimeMap fileExtension=".ttf"   mimeType="font/ttf" />
+		</staticContent>
+
+		<!-- CORS for font files -->
+		<httpProtocol>
+		  <customHeaders>
+			<add name="Access-Control-Allow-Origin" value="*" />
+			<add name="Access-Control-Allow-Methods" value="GET, HEAD, OPTIONS" />
+			<add name="Access-Control-Allow-Headers" value="*"/>
+			<add name="Vary" value="Origin" />
+		  </customHeaders>
+		</httpProtocol>  
     </system.webServer>
     <location path="newimg.aspx">
         <system.web>
