--- a/Triggerless.API/packages.config
+++ b/Triggerless.API/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net472" />
   <package id="ConcurrentHashSet" version="1.3.0" targetFramework="net472" />
   <package id="Dapper" version="2.1.66" targetFramework="net472" />
   <package id="Dapper.Contrib" version="2.0.78" targetFramework="net461" />
@@ -8,11 +9,15 @@
   <package id="DSharpPlus.Interactivity" version="4.5.1" targetFramework="net472" />
   <package id="log4net" version="3.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.6" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="9.0.6" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.6" targetFramework="net472" />
@@ -44,4 +49,5 @@
   <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net472" />
 </packages>
